# Mono-Notes-Project

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
src-electron/: notes.sqlite
src-electron/main/: index.js  settings.js  settingsStore.js  window.js
src-electron/main/ipc/: index.js  settings.ipc.js  ui.ipc.js  window.ipc.js
src-electron/main/state/: deepMerge.js  ui-state.js
src-electron/preload/: preload.js
src-electron/rust/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
src-electron/rust/src/: lib.rs
src-tauri/: .gitignore  2  Cargo.toml  notes.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  settings.rs  ui_state.rs  window_persistence.rs
src-tauri/src/commands/: mod.rs  notes_commands.rs  ui_commands.rs
src-tauri/src/db/: notes_db.rs
src/app/: fonts.ts  globals.css  layout.module.css  layout.tsx  page.tsx
src/app/components/: RightClickMenu.tsx
src/app/components/HeaderBar/: HeaderBar.jsx  HeaderBar.module.css  HeaderBar.tsx
src/app/components/NoteEditor/: NoteEditor.module.css  NoteEditor.tsx  types.ts
src/app/components/NotesList/: NotesList.tsx
src/app/components/NotesListTab/: NotesListTab.module.css  NotesListTab.tsx
src/app/components/SideBar/: SideBar.module.css  SideBar.tsx
src/app/components/SideBarTab/: SideBarTab.module.css  (+1 more)
src/app/context/: BlockActionsContext.tsx  DragContext.tsx  NotesContext.tsx
src/app/type/: electron.d.ts
src/types/: Settings.ts
src/utils/: debounce.ts  notes.ts  settings.ts  uiState.ts
(+15 files in other folders)
