[package]
name = "notes_backend"
version = "0.1.0"
authors = ["Jay Andre Rojas"]
edition = "2021"
description = "Rust backend for Electron Notes App"

[lib]
name = "notes_backend"
crate-type = ["cdylib"]

[dependencies]
rusqlite = { version = "0.38.0", features = ["bundled"] }
uuid = { version = "1.19.0", features = ["v4"] }
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
napi = "2.16.13"
napi-derive = "2.16.12"

[build-dependencies]
napi-build = "2.1.3"
